--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -4,24 +4,27 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title #{title}
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
-    link(rel="stylesheet", href="/admin/css/base.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
+    link(rel="stylesheet" href="/admin/css/base.css")
     link(rel="stylesheet" href="/client/css/boostrap.css")
     link(rel="stylesheet" href="/admin/css/style.css")
-    
+
   body
 
-    include ../partials/header.pug
+    if role.permissions[0] 
+      include ../partials/header.pug
 
-    .body 
+      .body 
 
-      include ../partials/sider.pug
+        include ../partials/sider.pug
 
-      .main 
-        block main 
+        .main 
+          block main 
 
-    script(src="/client/js/boostrap.js") 
-    script(src="/tinymce/tinymce.min.js")
-    script(src="/admin/js/tinymce-config.js")
-    script(src="/admin/js/script.js") 
-    script(src="/admin/js/products.js") 
+      script(src="/client/js/boostrap.js") 
+      script(src="/tinymce/tinymce.min.js")
+      script(src="/admin/js/tinymce-config.js")
+      script(src="/admin/js/script.js") 
+      script(src="/admin/js/products.js") 
+    else
+      h1 Your acount not authorized
