--- a/src/public/client/css/style.css
+++ b/src/public/client/css/style.css
@@ -1,56 +1,72 @@
 .header {
-  background-color: #00ff00;
-
+  background-color: #00a1ff;
 }
 
 .header .header-box {
   border-bottom: 1px solid #ddd;
   padding: 20px;
-  height: 100px;
 }
 
 .header .inner-logo {
-  width: 80px; /* Logo chỉ rộng 80px */
-  height: auto; /* Chiều cao tự động theo nội dung */
+  width: 70px;
+  height: 70px;
   margin-right: 30px;
 }
 
 .header .inner-logo img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.header .inner-menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .header .inner-menu ul {
   display: flex;
-  justify-content: flex-end;
-  list-style-type: none;
   align-items: center;
-  margin: 0;
+  justify-content: center;
   padding: 0;
+  margin: 0;
+  list-style-type: none;
+  text-decoration: none;
+  font-size: 20px;
 }
 
-.header .inner-menu ul li{
-  margin-right: 10px ;
+.header .inner-menu ul li {
+  margin-right: 20px;
 }
 
-.footer{
-  background-color: #000 ;
+.header .inner-menu ul li a {
+  color: #fff;
+}
+
+.footer {
+  background-color: #000;
   padding: 20px;
   text-align: center;
-  bottom : 0 ; 
+  bottom: 0;
 }
 
-.footer .title{
-  color : #fff ;
-  font-size : 20px ;
-
+.footer .title {
+  color: #fff;
+  font-size: 20px;
 }
 
-.box-head .inner-title{
-  color : #00ff00 ;
+.box-head .inner-title {
+  color: #00ff00;
   text-align: center;
-  font-size : 30px ; 
+  font-size: 30px;
 }
 
 .product-item {
@@ -62,7 +78,7 @@
 }
 
 .product-item:hover {
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .inner-image img {
@@ -76,8 +92,8 @@
   -o-border-radius: 5px;
 }
 
-.inner-content{
-  text-align : center ; 
+.inner-content {
+  text-align: center;
 }
 
 .inner-title {
@@ -96,14 +112,9 @@
   color: #999;
 }
 
-.inner-discount {
-  color: green;
-}
-
-
 /* Show Alert */
 
-[show-alert]{
+.body [show-alert] {
   position: fixed; /* Giữ vị trí cố định trên màn hình */
   top: 70px; /* Cách mép trên 70px */
   right: 15px; /* Cách mép phải 15px */
@@ -137,13 +148,55 @@
   }
 }
 
-.body [show-alert] span{
+.body [show-alert] span {
   font-weight: 600;
 }
 
-.body [show-alert] i{
-  margin-left: 10px; 
-  cursor: pointer; 
-  font-size : 20px ; 
+.body [show-alert] i {
+  margin-left: 10px;
+  cursor: pointer;
+  font-size: 20px;
 }
 /* End Show Alert */
+
+/* Menu cấp 1 */
+.sub-menu {
+  position: relative;
+  z-index: 999;
+}
+
+.header .sub-menu ul {
+  position: absolute;
+  z-index: 999;
+  background-color: #2cbeff;
+  display: none;
+  flex-direction: column;
+  min-width: 150px;
+  padding: 0;
+  margin: 0;
+  right: 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid #fff;
+}
+
+.header .sub-menu:hover > ul {
+  display: block;
+}
+
+.header .sub-menu ul li {
+  margin: 0;
+  display: flex;
+  padding: 5px 14px;
+  align-items: center;
+  justify-content: cneter;
+}
+
+.header .sub-menu ul li a {
+  font-size: 20px;
+  color: #fff;
+  font-weight: 500;
+}
