--- a/src/views/admin/partials/header.pug
+++ b/src/views/admin/partials/header.pug
@@ -3,5 +3,6 @@ header.header
     .row.align-item-center
       .col-3 
         a(href="/admin/dashboard") 
-         <i class="fa-solid fa-user-tie"></i> 
-      .col-9
+          <i class="fa-solid fa-user-tie"></i> 
+      .col-9.text-end
+        a(href="") #{user.fullName}
