--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -5,12 +5,20 @@ header
         .row 
           .col-3 
             .inner-logo 
-              img(src="/image/logo.png", alt="")
+              img(src="/client/image/logo.png" alt="")
           .col-9
             .inner-menu 
               ul 
                 li 
                   a(href="/") Home 
-                li 
+                li(class = "sub-menu")
                   a(href="/products") Products  
+                  ul 
+                    if categoryMiddleware
+                      each category in categoryMiddleware
+                        li
+                          a(href=`/products/${category.slug}`) #{category.title}
+                    else
+                      li Không có danh mục nào
+
 
