--- a/src/public/client/css/style.css
+++ b/src/public/client/css/style.css
@@ -77,14 +77,42 @@
   transition: 0.3s;
 }
 
+
 .product-item:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.product-item .inner-image {
+  position: relative;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 4/3;
+}
+
+.product-item .inner-image span{
+  position: absolute;
+  top: 0 ;
+  right: 0 ;
+  background-color: #00ff00;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff ;
+  padding: 2px 5px;
+  font-size : 15px ; 
+  font-weight: 600;
+  border-radius: 10px ;
+  -webkit-border-radius: 10px ;
+  -moz-border-radius: 10px ;
+  -ms-border-radius: 10px ;
+  -o-border-radius: 10px ;
+}
+
+
 .inner-image img {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  height: 100%;
+  object-fit: contain;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -114,7 +142,7 @@
 
 /* Show Alert */
 
-.body [show-alert] {
+[show-alert] {
   position: fixed; /* Giữ vị trí cố định trên màn hình */
   top: 70px; /* Cách mép trên 70px */
   right: 15px; /* Cách mép phải 15px */
@@ -148,11 +176,11 @@
   }
 }
 
-.body [show-alert] span {
+ [show-alert] span {
   font-weight: 600;
 }
 
-.body [show-alert] i {
+[show-alert] i {
   margin-left: 10px;
   cursor: pointer;
   font-size: 20px;
