--- a/src/views/client/pages/product/index.pug
+++ b/src/views/client/pages/product/index.pug
@@ -1,29 +1,19 @@
 extends ../../layout/default.pug
 include ../../mixins/box-head.pug
 include ../../mixins/box-alert.pug
+include ../../mixins/box-product.pug
 
 block main 
   +box-alert-success(3000)
   +box-alert-error(3000)
   +box-alert-warning(3000)
-  
+
   .container.my-3
     .row
       .col-12
         +box-head("Danh sách sản phẩm")
 
-    .row
-      each item in products
-        .col-4.mb-3
-          a(href=`/products/${item.slug}`) 
-            .product-item
-              .inner-image
-                img(src=item.thumbnail, alt=item.name)
-              .inner-content
-                h3.inner-title #{item.title}
-                .inner-price-new #{item.oldPrice}$
-                .inner-price-old #{item.price}$
-                .inner-discount -#{item.discountPercentage}%
+  +box-product(products)
 
 
 
