--- a/src/views/client/mixins/box-product.pug
+++ b/src/views/client/mixins/box-product.pug
@@ -2,7 +2,7 @@ mixin box-product(products)
   .row
     each item in products
       .col-4.mb-3
-        a(href=`/products/${item.slug}`) 
+        a(href=`/products/detail/${item.slug}`) 
           .product-item
             .inner-image
               img(src=item.thumbnail, alt=item.name)
