--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -1,12 +1,25 @@
+include ../mixins/formSearch.pug
+
 header 
   .header
     .container 
       .header-box
         .row 
-          .col-3 
+          .col-md-2
             .inner-logo 
               img(src="/client/image/logo.png" alt="")
-          .col-9
+          .col-md-6
+            form(action="/search", method="get"
+              )
+              .input-grop.d-flex
+                input(
+                  type="text"
+                  class = "form-control" 
+                  name = "keyword"
+                  placeholder="Tìm kiếm sản phẩm..."
+                  ) 
+                button(type="submit" class="btn btn-primary") <i class="fa-solid fa-magnifying-glass"></i>
+          .col-md-3
             .inner-menu 
               ul 
                 li 
