--- a/src/public/client/css/style.css
+++ b/src/public/client/css/style.css
@@ -241,3 +241,32 @@ body .btn-add-cart {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
+
+
+/* // css cart */
+body .box-cart{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+body .box-cart a{
+  position: relative;
+  color : #fff ; 
+  font-size : 25px ;
+}
+
+body .box-cart .icon-cart{
+  position: relative;
+}
+
+body .box-cart .quantity-product{
+  position: absolute;
+  top : -15px ; 
+  right : -15px ; 
+  font-size : 25px; 
+  color : orange ;
+}
+/* end  css cart */
