Đăng ký tài khoản

--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -33,6 +33,8 @@ header
                           a(href=`/products/${category.slug}`) #{category.title}
                     else
                       li Không có danh mục nào
+                li  
+                  a(href="/user/register") Sign up 
           .col-1
             .box-cart 
               a(href="/cart")
