Đăng nhập bên client

--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -35,6 +35,8 @@ header
                       li Không có danh mục nào
                 li  
                   a(href="/user/register") Sign up 
+                li 
+                  a(href="/user/login") Sign in  
           .col-1
             .box-cart 
               a(href="/cart")
