--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -33,10 +33,15 @@ header
                           a(href=`/products/${category.slug}`) #{category.title}
                     else
                       li Không có danh mục nào
-                li  
-                  a(href="/user/register") Sign up 
-                li 
-                  a(href="/user/login") Sign in  
+                if user
+                  li  
+                    a(href="/user/logout") Logout 
+                else 
+                  li  
+                    a(href="/user/register") Sign up 
+                  li 
+                    a(href="/user/login") Sign in 
+
           .col-1
             .box-cart 
               a(href="/cart")
