luồng quên mật khẩu

--- a/src/views/client/pages/login/index.pug
+++ b/src/views/client/pages/login/index.pug
@@ -25,3 +25,5 @@ block main
 
             .form-group.mb-4
               button.btn.btn-success(type="submit") Submit
+          
+          a(href="/user/password/forget") Quên mật khẩu? 
