update user for view client

--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -34,6 +34,8 @@ header
                     else
                       li Không có danh mục nào
                 if user
+                  li 
+                    a(href="/user/info")  #{user.fullName}
                   li  
                     a(href="/user/logout") Logout 
                 else 
