--- a/src/views/client/pages/login/index.pug
+++ b/src/views/client/pages/login/index.pug
@@ -17,7 +17,7 @@ block main
 
             .form-group.mb-4
               label(for="email") Email
-              input#email.form-control(type="email" name="email", required)
+              input#email.form-control(type="email" name="email", value = userLogin || "" required)
 
             .form-group.mb-4
               label(for="password") Mật khẩu
