--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -18,6 +18,8 @@ sider.sider
       if role.permissions[0].includes("account_view")
         li  
           a(href="/admin/account") account
+      //- li 
+      //-   a(href="/admin/setting/general") Setting  
   .box-logout 
     a(href="/admin/auth/logout" class = "box-login") 
       span Đăng xuất
