--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -18,5 +18,7 @@ html(lang="en")
 
     script(src="/client/js/boostrap.js") 
     script(src="/client/js/script.js") 
+    script(src="/socket.io/socket.io.js")
+    script(src="/client/js/chat.js") 
 
 
