tính năng chat cơ bản

--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -43,6 +43,8 @@ header
                     a(href="/user/register") Sign up 
                   li 
                     a(href="/user/login") Sign in 
+                li  
+                  a(href="/chat") Chat 
 
           .col-1
             .box-cart 
