--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -7,24 +7,23 @@ block main
 
   .container 
     .row 
-      .chat 
+      .chat(my-id = user.id )
         .inner-head
-          
-        .inner-body 
-          .inner-incoming
-              .inner-name Em Yêu
-              .inner-content
-                | A ơi sang nhà em nha, nhà em không có ai ở nhà cả
-          .inner-outgoing
-            .inner-content
-              | Thế à? Ok em iu
 
-          .inner-incoming
-            .inner-name Em Yêu
-            .inner-content
-              | Nhanh nha nhanh nha
+        .inner-body 
+          each chat in chats 
+            if chat.user_id === user.id 
+              .inner-outgoing
+                .inner-content
+                  | #{chat.content}
+            else 
+              .inner-incoming
+                .inner-name #{chat.infoUser.fullName}
+                .inner-content
+                  | #{chat.content}
+
         .inner-foot
-            form.inner-form(action="")
-              input(type="text" placeholder="Nhập nội dung..." name="content")
-              button
-                i.fa-solid.fa-paper-plane
+          form.inner-form(action="")
+            input(type="text" placeholder="Nhập nội dung..." name="content")
+            button
+              i.fa-solid.fa-paper-plane
