--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -25,5 +25,11 @@ block main
         .inner-foot
           form.inner-form(action="")
             input(type="text" placeholder="Nhập nội dung..." name="content")
+            span(class = "button-icon") 
+              i.fa-regular.fa-face-grin-wide
             button
               i.fa-solid.fa-paper-plane
+
+  div(class="tooltip" role="tooltip")
+    emoji-picker
+
