--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -19,6 +19,8 @@ html(lang="en")
     script(src="/client/js/boostrap.js") 
     script(src="/client/js/script.js") 
     script(src="/socket.io/socket.io.js")
-    script(src="/client/js/chat.js") 
+    script(type="module" src="/client/js/chat.js")
+    script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")  
+
 
 
