--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title #{title}
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
     link(rel="stylesheet" href="/client/css/boostrap.css")
+    link(rel="stylesheet" href="https://unpkg.com/file-upload-with-preview/dist/style.css")
     link(rel="stylesheet" href="/client/css/base.css")
     link(rel="stylesheet" href="/client/css/style.css")
 
@@ -17,10 +18,17 @@ html(lang="en")
     include ../partials/footer.pug 
 
     script(src="/client/js/boostrap.js") 
-    script(src="/client/js/script.js") 
+    //- socket
     script(src="/socket.io/socket.io.js")
-    script(type="module" src="/client/js/chat.js")
+    script(src="/client/js/socket.js") 
+
+
     script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")  
 
+    script( type = "module" src="https://unpkg.com/file-upload-with-preview/dist/index.js") 
+
+    script(type = "module" src="/client/js/chat.js")
+
+    script(src="/client/js/script.js") 
 
 
