--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -7,30 +7,34 @@ block main
 
   .container 
     .row 
-      .chat(my-id = user.id )
+      .chat(my-id = user.id)
         .inner-head
         .inner-body 
           each chat in chats 
-            if chat.user_id === user.id 
-              .inner-outgoing
-                .inner-content
-                  | #{chat.content}
-            else 
-              .inner-incoming
+            div(class = (chat.user_id == user.id ? "inner-outgoing" : "inner-incoming"))
+              if chat.user_id != user.id 
                 .inner-name #{chat.infoUser.fullName}
-                .inner-content
+              if chat.content
+                .inner-content 
                   | #{chat.content}
+              if chat.images && chat.images.length > 0
+                .inner-images 
+                  each image in chat.images 
+                    img(src = image , alt="")
 
           .inner-list-typing
 
         .inner-foot
+          .inner-images-preview 
+            div(class="custom-file-container" data-upload-id="upload-images")
           form.inner-form(action="")
             input(type="text" placeholder="Nhập nội dung..." name="content")
+            label(for = "file-upload-with-preview-upload-images" class="upload-images")
+              i.fa-solid.fa-image
             span(class = "button-icon") 
               i.fa-regular.fa-face-grin-wide
-            button
+            button(type = "submit")
               i.fa-solid.fa-paper-plane
 
   div(class="tooltip" role="tooltip")
     emoji-picker
-
