Xem ảnh toàn man hình

--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -7,6 +7,7 @@ html(lang="en")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
     link(rel="stylesheet" href="/client/css/boostrap.css")
     link(rel="stylesheet" href="https://unpkg.com/file-upload-with-preview/dist/style.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.css")
     link(rel="stylesheet" href="/client/css/base.css")
     link(rel="stylesheet" href="/client/css/style.css")
 
@@ -26,6 +27,9 @@ html(lang="en")
     script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")  
 
     script( type = "module" src="https://unpkg.com/file-upload-with-preview/dist/index.js") 
+
+    //- config viewer
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js") 
 
     script(type = "module" src="/client/js/chat.js")
 
