--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -6,6 +6,9 @@ block main
   +box-head("chat") 
 
   .container 
+
+    include ../../partials/list-btn-user.pug
+
     .row 
       .chat(my-id = user.id)
         .inner-head
