Gửi yêu cầu kết bạn A -> B

--- a/src/public/client/css/style.css
+++ b/src/public/client/css/style.css
@@ -201,7 +201,7 @@
   display: flex;
   padding: 5px 14px;
   align-items: center;
-  justify-content: cneter;
+  justify-content: center;
 }
 
 .header .sub-menu ul li a {
@@ -219,10 +219,6 @@ body .btn-add-cart {
   font-size: 18px;
   font-weight: 500;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
 }
 
 /* // css cart */
