--- a/src/views/client/layout/default.pug
+++ b/src/views/client/layout/default.pug
@@ -31,8 +31,8 @@ html(lang="en")
     //- config viewer
     script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js") 
 
-    script(type = "module" src="/client/js/chat.js")
 
     script(src="/client/js/script.js") 
 
+    block script
 
