--- a/src/views/client/pages/chat/index.pug
+++ b/src/views/client/pages/chat/index.pug
@@ -41,3 +41,6 @@ block main
 
   div(class="tooltip" role="tooltip")
     emoji-picker
+
+  block script 
+    script(type = "module" src="/client/js/chat.js")
