--- a/src/views/client/pages/users/not-friend.pug
+++ b/src/views/client/pages/users/not-friend.pug
@@ -21,3 +21,5 @@ block main
                 button.btn.btn-sm.btn-secondary.m-1(
                   btn-cancel-friend=user.id
                 ) Hủy
+block script 
+  script(src="/client/js/users.js") 
