--- a/src/views/client/pages/users/accept.pug
+++ b/src/views/client/pages/users/accept.pug
@@ -20,6 +20,10 @@ block main
                   button.btn.btn-sm.btn-primary.m-1(
                     btn-accept-friend=user.id
                   ) Chấp nhận
+                  button.btn.btn-sm.btn-primary.m-1(
+                    btn-accepted-friend=user.id
+                    disabled
+                  ) Da Chấp nhận
                   button.btn.btn-sm.btn-secondary.m-1(
                     btn-refuse-friend=user.id
                   ) Hủy
