--- a/src/views/client/partials/list-btn-user.pug
+++ b/src/views/client/partials/list-btn-user.pug
@@ -3,4 +3,9 @@
     a.btn.btn-primary.m-1(href="/users/not-friend") Danh sách người dùng
     a.btn.btn-primary.m-1(href="/users/friends") Danh sách bạn bè
     a.btn.btn-primary.m-1(href="/users/request") Lời mời đã gửi
-    a.btn.btn-primary.m-1(href="/users/accept") Lời mời kết bạn
+    a.btn.btn-primary.m-1(href="/users/accept") 
+      | Lời mời kết bạn
+      //- if user.friendAccepts.length > 0
+      span.badge.badge-light(
+        badge-user-accept = user.id 
+      )  #{user.friendAccepts.length}
